kustomize/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messageboard-staging  # Change per env
